--- a/index.html
+++ b/index.html
@@ -1,25 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Mi primera web</title>
+  <meta charset="UTF-8" />
+  <title>AARTS Motion — Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Motion Designer & Visual Designer" />
+
   <style>
+    * { box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
+      font-family: Inter, system-ui, sans-serif;
+      background: #0b0b0b;
+      color: #fff;
+      line-height: 1.6;
     }
-    h1 {
-      font-size: 3rem;
+    a { color: #fff; text-decoration: none; }
+    section { padding: 80px 6vw; max-width: 1200px; margin: auto; }
+
+    .hero h1 { font-size: clamp(2.5rem, 5vw, 4rem); margin: 0; }
+    .hero p { max-width: 500px; opacity: .8; }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
+      margin-top: 40px;
+    }
+
+    .card {
+      background: #151515;
+      border-radius: 16px;
+      overflow: hidden;
+      transition: transform .3s;
+    }
+    .card:hover { transform: translateY(-6px); }
+
+    .card img {
+      width: 100%;
+      display: block;
+    }
+
+    .card div { padding: 20px; }
+
+    .btn {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 14px 28px;
+      border-radius: 999px;
+      background: #fff;
+      color: #000;
+      font-weight: 600;
+    }
+
+    footer {
+      padding: 40px;
+      text-align: center;
+      opacity: .5;
+      font-size: .9rem;
     }
   </style>
 </head>
 <body>
-  <h1>🚀 Mi web está online</h1>
+
+<section class="hero">
+  <h1>Motion Designer & Visual Creator</h1>
+  <p>Creo animaciones, videos y visuales que conectan marcas con personas.</p>
+  <a class="btn" href="#contacto">Contáctame</a>
+</section>
+
+<section>
+  <h2>Proyectos</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="https://placehold.co/600x400" alt="">
+      <div>
+        <h3>Proyecto 01</h3>
+        <p>Motion graphics / Branding</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://placehold.co/600x400" alt="">
+      <div>
+        <h3>Proyecto 02</h3>
+        <p>Social Media Animation</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Servicios</h2>
+  <p>• Motion graphics<br>• Branding visual<br>• Videos para redes<br>• Animaciones para apps</p>
+</section>
+
+<section id="contacto">
+  <h2>Contacto</h2>
+  <p>Email: contacto@aartsmotion.com.br</p>
+</section>
+
+<footer>
+  © 2026 AARTS Motion
+</footer>
+
 </body>
 </html>
