--- a/index.html
+++ b/index.html
@@ -1,118 +1,194 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Motion Designer</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>A. Arts Motion</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;900&display=swap" rel="stylesheet">
+  <!-- Fuente similar (puedes cambiarla por la exacta si me dices cuál usaste en Figma) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
 
-<style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-}
-
-body{
-    font-family:'Inter', sans-serif;
-    background:#000;
-    color:#00ff66;
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-}
-
-.container{
-    width:90%;
-    max-width:1200px;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-}
-
-.left{
-    display:flex;
-    flex-direction:column;
-    gap:20px;
-}
-
-.see-work{
-    color:#fff;
-    font-size:14px;
-    text-transform:uppercase;
-    letter-spacing:2px;
-    cursor:pointer;
-}
-
-.chat-btn{
-    background:#fff;
-    color:#000;
-    padding:14px 28px;
-    border-radius:40px;
-    font-weight:700;
-    text-decoration:none;
-    transition:.3s ease;
-}
-
-.chat-btn:hover{
-    background:#00ff66;
-    color:#000;
-}
-
-.right h1{
-    font-size:100px;
-    line-height:0.9;
-    font-weight:900;
-    text-transform:uppercase;
-}
-
-.footer{
-    position:absolute;
-    bottom:30px;
-    left:50%;
-    transform:translateX(-50%);
-    color:#00ff66;
-    font-size:14px;
-    letter-spacing:3px;
-}
-@media(max-width:900px){
-    .container{
-        flex-direction:column;
-        gap:40px;
-        text-align:center;
+  <style>
+    :root{
+      --bg:#050505;
+      --neon:#00ff66;
+      --white:#ffffff;
+      --black:#000000;
     }
 
-    .right h1{
-        font-size:60px;
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:
+        radial-gradient(900px 600px at 35% 55%, rgba(0,255,102,.10), transparent 55%),
+        radial-gradient(900px 600px at 70% 45%, rgba(0,255,102,.06), transparent 60%),
+        var(--bg);
+      color:var(--neon);
+      overflow-x:hidden;
     }
-}
-</style>
+
+    /* “Marco” tipo MacBook 16” */
+    .stage{
+      min-height:100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding: clamp(18px, 4vw, 52px);
+    }
+
+    .frame{
+      width:min(1500px, 100%);
+      aspect-ratio: 16 / 9;
+      position:relative;
+      border-radius: 18px;
+    }
+
+    /* Top label: A. ARTS © 2026 */
+    .top-tag{
+      position:absolute;
+      left: clamp(18px, 5vw, 90px);
+      top:  clamp(18px, 4vw, 70px);
+      font-weight:800;
+      letter-spacing:.35em;
+      font-size: clamp(14px, 1.2vw, 18px);
+      opacity:.95;
+      text-transform:uppercase;
+      white-space:nowrap;
+    }
+
+    /* Headline */
+    .headline{
+      position:absolute;
+      left: clamp(18px, 5vw, 90px);
+      top:  clamp(70px, 10vw, 150px);
+      margin:0;
+      font-weight:900;
+      text-transform:uppercase;
+      letter-spacing:-0.02em;
+      line-height:0.88;
+      font-size: clamp(56px, 7.4vw, 132px);
+      text-shadow: 0 0 34px rgba(0,255,102,.10);
+    }
+
+    /* Sello circular a la izquierda */
+    .seal{
+      position:absolute;
+      left: clamp(6px, 1.8vw, 26px);
+      top:  50%;
+      transform: translateY(-35%);
+      width: clamp(150px, 14vw, 220px);
+      height: clamp(150px, 14vw, 220px);
+      filter: drop-shadow(0 0 18px rgba(0,255,102,.10));
+      opacity:.98;
+    }
+    .seal svg{width:100%; height:100%; display:block}
+
+    /* Botones a la derecha (mismo nivel visual que “MOTION”) */
+    .actions{
+      position:absolute;
+      right: clamp(18px, 4vw, 90px);
+      top:  50%;
+      transform: translateY(-5%);
+      display:flex;
+      gap: 18px;
+      align-items:center;
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      border-radius: 999px;
+      padding: 18px 34px;
+      font-weight:900;
+      letter-spacing: 0.01em;
+      text-transform:uppercase;
+      font-size: clamp(14px, 1.25vw, 18px);
+      text-decoration:none;
+      border: 2px solid transparent;
+      box-shadow: 0 10px 30px rgba(0,0,0,.35);
+      transition: transform .14s ease, filter .14s ease;
+      white-space:nowrap;
+    }
+    .pill:hover{ transform: translateY(-2px); filter: brightness(1.03); }
+
+    .pill.work{
+      background: var(--neon);
+      color: var(--black);
+    }
+    .pill.chat{
+      background: var(--white);
+      color: var(--black);
+    }
+
+    /* Responsive */
+    @media (max-width: 900px){
+      .frame{ aspect-ratio:auto; min-height: 720px; }
+      .actions{
+        right:auto;
+        left: clamp(18px, 5vw, 90px);
+        top:  auto;
+        bottom: clamp(18px, 5vw, 70px);
+        transform:none;
+        flex-wrap:wrap;
+        gap: 12px;
+      }
+      .seal{
+        top: auto;
+        bottom: 140px;
+        transform:none;
+      }
+    }
+  </style>
 </head>
 
 <body>
+  <main class="stage">
+    <section class="frame">
 
-<div class="container">
+      <div class="top-tag">A. ARTS © 2026</div>
 
-    <div class="left">
-        <div class="see-work">see my work</div>
-        <a href="#" class="chat-btn">Let's Chat!</a>
-    </div>
+      <h1 class="headline">
+        I’M A<br>
+        MOTION<br>
+        DESIGNER.
+      </h1>
 
-    <div class="right">
-        <h1>
-            I’m a<br>
-            Motion<br>
-            Designer.
-        </h1>
-    </div>
+      <!-- Seal (texto circular + marca simple) -->
+      <div class="seal" aria-hidden="true">
+        <svg viewBox="0 0 200 200">
+          <defs>
+            <path id="circlePath" d="M 100,100 m -72,0 a 72,72 0 1,1 144,0 a 72,72 0 1,1 -144,0" />
+          </defs>
 
-</div>
+          <circle cx="100" cy="100" r="78" fill="none" stroke="rgba(0,255,102,.25)" stroke-width="2"/>
+          <circle cx="100" cy="100" r="64" fill="none" stroke="rgba(0,255,102,.35)" stroke-width="2"/>
 
-<div class="footer">
-    A. Arts © 2026
-</div>
+          <text fill="rgba(0,255,102,.95)" font-size="11" font-weight="800" letter-spacing="2">
+            <textPath href="#circlePath">
+              VISUAL SOLUTIONS, BUILT TO • VISUAL SOLUTIONS, BUILT TO •
+            </textPath>
+          </text>
 
+          <!-- marca central -->
+          <g transform="translate(62,68) rotate(-15 38 32)">
+            <rect x="10" y="12" width="76" height="76" rx="16" fill="rgba(0,255,102,.10)" stroke="rgba(0,255,102,.6)" stroke-width="2"/>
+            <path d="M22 55 L66 30 L76 42 L34 66 Z" fill="rgba(0,255,102,1)"/>
+            <rect x="70" y="52" width="12" height="12" rx="3" fill="rgba(0,255,102,1)"/>
+          </g>
+        </svg>
+      </div>
+
+      <div class="actions">
+        <a class="pill work" href="#work">SEE MY WORK</a>
+        <a class="pill chat" href="#chat">LET’S CHAT!</a>
+      </div>
+
+    </section>
+  </main>
 </body>
 </html>
