--- a/index.html
+++ b/index.html
@@ -1,80 +1,189 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>A. Arts Motion</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
 
 <style>
-:root{
-    --bg:#000000;
+  :root{
+    --bg:#000;
     --neon:#00ff66;
-}
+    --text:#eaeaea;
+  }
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-}
-
-body{
+  *{margin:0;padding:0;box-sizing:border-box}
+  html{scroll-behavior:smooth}
+  body{
+    font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;
     background:var(--bg);
-    font-family:'Inter',sans-serif;
-    height:100vh;
+    color:var(--neon);
+  }
+
+  /* Secciones */
+  section{
+    min-height:100vh;
     display:flex;
     align-items:center;
     justify-content:center;
-    color:var(--neon);
-}
+    padding: clamp(18px, 4vw, 56px);
+  }
 
-.wrapper{
+  /* HERO */
+  .hero{
     text-align:center;
-}
-
-.top{
+  }
+  .top{
     font-size:18px;
     letter-spacing:6px;
     margin-bottom:50px;
-}
-
-.line{
+    opacity:.95;
+  }
+  .line{
     font-size:120px;
     font-weight:900;
     line-height:0.9;
     text-transform:uppercase;
-}
-
-.motion{
+  }
+  .motion{
     display:flex;
     align-items:center;
     justify-content:center;
     gap:30px;
-}
-
-.motion img{
+  }
+  .motion img{
     height:130px;
-}
+    display:block;
+  }
+
+  .actions{
+    margin-top:46px;
+    display:flex;
+    gap:14px;
+    justify-content:center;
+    flex-wrap:wrap;
+  }
+  .btn{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    padding:14px 22px;
+    border-radius:999px;
+    text-decoration:none;
+    font-weight:900;
+    letter-spacing:.04em;
+    text-transform:uppercase;
+    border:2px solid rgba(255,255,255,.12);
+    transition:transform .15s ease, filter .15s ease, background .15s ease;
+    background:rgba(255,255,255,.06);
+    color:#fff;
+  }
+  .btn:hover{transform:translateY(-2px);filter:brightness(1.05)}
+  .btn.neon{
+    background:var(--neon);
+    color:#000;
+    border-color:transparent;
+  }
+
+  /* WORK / CHAT (placeholders) */
+  .panel{
+    width:min(1100px, 100%);
+    border: 1px solid rgba(0,255,102,.22);
+    border-radius:18px;
+    padding: clamp(18px, 3vw, 36px);
+    background: rgba(0,255,102,.03);
+    text-align:left;
+  }
+  .panel h2{
+    color:var(--neon);
+    font-size: clamp(28px, 3.2vw, 44px);
+    text-transform:uppercase;
+    letter-spacing:-0.02em;
+    margin-bottom:10px;
+  }
+  .panel p{
+    color:var(--text);
+    opacity:.92;
+    line-height:1.6;
+    max-width:70ch;
+  }
+
+  .grid{
+    margin-top:20px;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:14px;
+  }
+  .card{
+    height:160px;
+    border-radius:16px;
+    border:1px solid rgba(255,255,255,.10);
+    background: rgba(255,255,255,.04);
+  }
+
+  @media (max-width: 980px){
+    .line{font-size:70px}
+    .motion img{height:78px}
+    .grid{grid-template-columns:1fr}
+  }
+
+  /* Para que el #work no quede pegado arriba si luego metes un header */
+  #work, #chat { scroll-margin-top: 20px; }
 </style>
 </head>
 
 <body>
 
-<div class="wrapper">
-
+<!-- HERO / HOME -->
+<section id="home">
+  <div class="hero">
     <div class="top">A. ARTS © 2026</div>
 
     <div class="line">I’M A</div>
 
     <div class="motion line">
-        MOTION
-        <img src="logo.gif" alt="Logo">
+      MOTION
+      <img src="logo.gif" alt="Logo animation">
     </div>
 
     <div class="line">DESIGNER.</div>
 
-</div>
+    <div class="actions">
+      <a class="btn neon" href="#work">See my work</a>
+      <a class="btn" href="#chat">Let’s chat!</a>
+    </div>
+  </div>
+</section>
+
+<!-- WORK -->
+<section id="work">
+  <div class="panel">
+    <h2>Work</h2>
+    <p>
+      Aquí van tus proyectos (reels, case studies, clips, links).  
+      Si quieres, te lo dejo con cards clicables, filtro por categoría y un modal con video.
+    </p>
+
+    <div class="grid" aria-label="Project grid placeholders">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
+  </div>
+</section>
+
+<!-- CHAT / CONTACT -->
+<section id="chat">
+  <div class="panel">
+    <h2>Let’s chat</h2>
+    <p>
+      Pon aquí tu WhatsApp, email o un formulario.
+      Ejemplo rápido: <b style="color:var(--neon)">contact@aartsmotion.com.br</b>
+    </p>
+  </div>
+</section>
 
 </body>
 </html>
