--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <div class="motion line">
       MOTION
-      <img src="/logo.gif" alt="logo">
+      <img src="/logo.gif">
     </div>
 
     <div class="line">DESIGNER.</div>
