--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
       <img src="Logo.gif">
     </div>
 
-    <div class="line">DESIGNER.</div>
+    <div class="line designer-line">
+  DESIGNER
+  <img src="/logo.gif?v=5" class="dot-gif" alt="logo">
+</div>
 
     <div class="actions">
       <a class="btn neon" href="#work">See my work</a>
