--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <div class="line designer-line">
   DESIGNER
-  <img src="/logo.gif?v=5" class="dot-gif" alt="logo">
+  <img src="/logo.gif?v=5" class="dot-gif">
 </div>
 
     <div class="actions">
