--- a/index.html
+++ b/index.html
@@ -147,10 +147,7 @@
       MOTION
     </div>
 
-    <div class="line designer-line">
-  DESIGNER
-  <img src="/logo.gif?v=5" class="dot-gif">
-</div>
+    <div class="line">DESIGNER.</div>
 
     <div class="actions">
       <a class="btn neon" href="#work">See my work</a>
