--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 
     <div class="line">I’M A</div>
 
+    <div class="line designer-line">
+  DESIGNER
+  <img src="/logo.gif?v=5" class="dot-gif">
+</div>
+    <div class="line">DESIGNER.</div>
+
    <div class="line">DESIGNER.</div>
 
     <div class="actions">
