--- a/index.html
+++ b/index.html
@@ -144,11 +144,8 @@
     <div class="line">I’M A</div>
 
     <div class="line designer-line">
-  DESIGNER
-  <img src="/logo.gif?v=5" class="dot-gif">
-</div>
-    <div class="line">DESIGNER.</div>
-
+MOTION
+      
    <div class="line">DESIGNER.</div>
 
     <div class="actions">
