--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
 
     <div class="line">I’M A</div>
 
-    <div class="line designer-line">
-MOTION
-      
-   <div class="line">DESIGNER.</div>
+    <div class="motion line">
+      MOTION
+    </div>
+
+    <div class="line">DESIGNER.</div>
 
     <div class="actions">
       <a class="btn neon" href="#work">See my work</a>
