--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="actions">
     <!-- VA A OTRA PAGINA -->
-    <a class="btn neon" href="work.html">See my work</a>
+    <a class="btn neon" href="/work/">See my work</a>
 
     <!-- WHATSAPP DIRECTO -->
     <a class="btn"
