--- a/work/index.html
+++ b/work/index.html
@@ -133,7 +133,7 @@ body{
 
 <div class="header">
   <div class="logo">A. ARTS</div>
-  <a href="index.html" class="back-btn">Back</a>
+  <a href="aartsmotion.com.br" class="back-btn">Back</a>
 </div>
 
 <div class="title">My Work</div>
